terraform/ec2.tf
resource "aws_instance" "app_server" {
  ami           = ""
  instance_type = "t2.micro"

  security_groups = [aws_security_group.app_sg.name]

  iam_instance_profile = aws_iam_instance_profile.ec2_profile.name

  user_data = file("install_docker.sh")

  tags = {
    Name = "DevOps-App-Server"
  }
}
